@@ -1,3 +1,9 @@
+2006-12-17  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Fixed leaking CameraFile + data on Canon and Nikon
+	  capture.
+	* library.c: Added HP Photosmart E427
+
 2006-12-10  Marcus Meissner  <marcus@jet.franken.de>
 
 	* Makefile.am: Link against libiconv if necessary.
